--- a/mpt-monitors/src/CMakeLists.txt
+++ b/mpt-monitors/src/CMakeLists.txt
@@ -9,7 +9,7 @@ set(ONETIME_READ_EVENTS_LIMIT 128)
 
 add_library(monitor-od STATIC monitor.cpp private.cpp cfgs.cpp)
 target_include_directories(monitor-od PUBLIC ${vamos-buffers_INCLUDE_DIRS})
-target_link_libraries(monitor-od PUBLIC vamos-hyper vamos-buffers-event)
+target_link_libraries(monitor-od PUBLIC vamos-buffers-event)
 target_compile_definitions(monitor-od
 			   #PRIVATE EXIT_ON_ERROR=1
 			   PRIVATE REDUCT_SYMMETRY=1
@@ -20,7 +20,7 @@ target_compile_definitions(monitor-od
 
 add_library(monitor-od-dbg STATIC monitor.cpp private.cpp cfgs.cpp)
 target_include_directories(monitor-od-dbg PUBLIC ${vamos-buffers_INCLUDE_DIRS})
-target_link_libraries(monitor-od-dbg PUBLIC vamos-hyper vamos-buffers-event)
+target_link_libraries(monitor-od-dbg PUBLIC vamos-buffers-event)
 target_compile_definitions(monitor-od-dbg
 		           #PRIVATE EXIT_ON_ERROR=1
 			   PRIVATE OUTPUT=1
