--- a/mpt-monitors/bin/CMakeLists.txt
+++ b/mpt-monitors/bin/CMakeLists.txt
@@ -5,8 +5,9 @@ set(MONITOR_MAIN ../src/main.cpp)
 foreach (NUM_STREAMS RANGE 500 3000 500)
 foreach (STREAM_LEN 500 5000 10000 15000 20000)
 set(target monitor_rand-${NUM_STREAMS}-${STREAM_LEN})
-add_executable(${target} ${MONITOR_MAIN} ../monitor_inputs.cpp)
-target_include_directories(${target} PUBLIC ${vamos-buffers_INCLUDE_DIRS})
+add_executable(${target} ${MONITOR_MAIN} ../inputs/inputs.cpp)
+target_include_directories(${target} PUBLIC ${vamos-buffers_INCLUDE_DIRS}
+				     PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
 target_link_libraries(${target} PRIVATE monitor-od)
 target_compile_definitions(${target}
 	                   #PRIVATE RAND_SEED=0xdeed
@@ -20,8 +21,9 @@ foreach (DIST RANGE 10 200 30)
 foreach (NUM_STREAMS RANGE 100 500 100)
 foreach (STREAM_LEN 100 500 1000)
 set(target monitor_1t_${DIST}-${NUM_STREAMS}-${STREAM_LEN})
-add_executable(${target} ${MONITOR_MAIN} ../monitor_inputs-1t.cpp)
-target_include_directories(${target} PUBLIC ${vamos-buffers_INCLUDE_DIRS})
+add_executable(${target} ${MONITOR_MAIN} ../inputs/inputs-1t.cpp)
+target_include_directories(${target} PUBLIC ${vamos-buffers_INCLUDE_DIRS}
+				     PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
 target_link_libraries(${target} PRIVATE monitor-od)
 target_compile_definitions(${target}
 			   PRIVATE NUM_STREAMS=${NUM_STREAMS}
@@ -32,21 +34,23 @@ endforeach()
 endforeach()
 endforeach()
 
-foreach (SPOS RANGE 33 100 33)
-foreach (DIST RANGE 10 200 30)
-foreach (NUM_STREAMS RANGE 100 500 100)
-foreach (STREAM_LEN 100 500 1000)
-set(target monitor_2t_${SPOS}_${DIST}-${NUM_STREAMS}-${STREAM_LEN})
-add_executable(${target} ${MONITOR_MAIN} ../monitor_inputs-2t.cpp)
-target_include_directories(${target} PUBLIC ${vamos-buffers_INCLUDE_DIRS})
-target_link_libraries(${target} PRIVATE monitor-od)
-target_compile_definitions(${target}
-			   PRIVATE NUM_STREAMS=${NUM_STREAMS}
-			   PRIVATE STREAM_LEN=${STREAM_LEN}
-			   PRIVATE SPOS=${SPOS}
-			   PRIVATE DIST=${DIST}
-			   )
-endforeach()
-endforeach()
-endforeach()
-endforeach()
+## SPOS = starting position
+#foreach (SPOS RANGE 0 100 33)
+#foreach (DIST RANGE 0 200 50)
+#foreach (NUM_STREAMS RANGE 100 500 100)
+#foreach (STREAM_LEN 100 500 1000)
+#set(target monitor_2t_${SPOS}_${DIST}-${NUM_STREAMS}-${STREAM_LEN})
+#add_executable(${target} ${MONITOR_MAIN} ../inputs/inputs-2t.cpp)
+#target_include_directories(${target} PUBLIC ${vamos-buffers_INCLUDE_DIRS}
+#                                     PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
+#target_link_libraries(${target} PRIVATE monitor-od)
+#target_compile_definitions(${target}
+#                           PRIVATE NUM_STREAMS=${NUM_STREAMS}
+#                           PRIVATE STREAM_LEN=${STREAM_LEN}
+#                           PRIVATE SPOS=${SPOS}
+#                           PRIVATE DIST=${DIST}
+#                           )
+#endforeach()
+#endforeach()
+#endforeach()
+#endforeach()
